# codeslayer.launcher-plugin

./: Makefile.in  configure  configure.ac
.codeslayer/: autotools.conf
codeslayer.config/: ctags.conf
launcher/: Makefile.in  configure  configure.ac  launcher.codeslayer-plugin.in
launcher/.svn/: all-wcprops  dir-prop-base  entries
launcher/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  configure.svn-base
launcher/autom4te.cache/: output.1  requests  traces.0  traces.1
launcher/build-prod/: Makefile  config.status  libtool
launcher/build-prod/src/: Makefile  liblaunchercodeslayerplugin.la  liblaunchercodeslayerplugin_la-launcher-configuration.lo  liblaunchercodeslayerplugin_la-launcher-engine.lo  liblaunchercodeslayerplugin_la-launcher-menu.lo  liblaunchercodeslayerplugin_la-launcher-plugin.lo  liblaunchercodeslayerplugin_la-launcher-project-properties.lo  liblaunchercodeslayerplugin_la-launcher-projects-popup.lo
launcher/build-prod/src/.deps/: liblaunchercodeslayerplugin_la-launcher-configuration.Plo  liblaunchercodeslayerplugin_la-launcher-engine.Plo  (+4 more)
launcher/m4/.svn/: entries
launcher/src/: Makefile.in  launcher-engine.c  launcher-menu.c  launcher-plugin.c
launcher/src/.svn/: all-wcprops  entries
m4/.svn/: all-wcprops
src/: Makefile.am  Makefile.in  launcher-config.c  launcher-config.h  launcher-configuration.h  launcher-engine.c  launcher-engine.h  launcher-menu.c  launcher-menu.h  launcher-plugin.c  launcher-project-properties.c  launcher-project-properties.h  launcher-projects-popup.c  launcher-projects-popup.h
(+7 files in other folders)
