INCLUDES = \
    $(LAUNCHERCODESLAYERPLUGIN_CFLAGS) \
    -I$(top_srcdir) \
    -I$(srcdir)

lib_LTLIBRARIES = liblaunchercodeslayerplugin.la

liblaunchercodeslayerplugin_la_SOURCES = \
    launcher-plugin.c \
    launcher-engine.h \
    launcher-engine.c \
    launcher-configuration.h \
    launcher-configuration.c \
    launcher-project-properties.h \
    launcher-project-properties.c \
    launcher-projects-popup.h \
    launcher-projects-popup.c \
    launcher-menu.h \
    launcher-menu.c

liblaunchercodeslayerplugin_la_CPPFLAGS = -I$(top_srcdir)
