lib_LTLIBRARIES = liblaunchercodeslayerplugin.la

liblaunchercodeslayerplugin_la_SOURCES = \
    launcher-plugin.c \
    launcher-engine.h \
    launcher-engine.c \
    launcher-config.h \
    launcher-config.c \
    launcher-project-properties.h \
    launcher-project-properties.c \
    launcher-projects-popup.h \
    launcher-projects-popup.c \
    launcher-menu.h \
    launcher-menu.c

liblaunchercodeslayerplugin_la_CPPFLAGS = $(LAUNCHERCODESLAYERPLUGIN_CFLAGS) -I$(top_srcdir) -I$(srcdir)
